# local-agent-delegate

./: .gitignore  .mcp.json  README.md  pyproject.toml
mcp/: local-agent-delegate-mcp.py
scripts/: publish-forgejo.sh
skills/local-agent-delegate/: SKILL.md
src/local_agent_delegate/: __init__.py  jobs.py  mcp.py  policy.py  runner.py
src/local_agent_delegate/backend_skills/delegate_scout/: SKILL.md
tests/: test_mcp.py  test_runner.py
